--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 certifi==2022.6.15
 charset-normalizer==2.0.12
+dj-database-url==0.5.0
 Django==4.0.5
+django-on-heroku==1.1.2
 djangorestframework==3.13.1
 idna==3.3
 mysqlclient==2.1.0
+psycopg2-binary==2.9.3
 pytz==2022.1
 requests==2.28.0
 requests-toolbelt==0.9.1
 sqlparse==0.4.2
 urllib3==1.26.9
+whitenoise==6.2.0
